# vecadvisor

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docker/: docker-compose.yml
docs/: predicates.md  release.md
docs/assets/: vecadvisor-demo.cast
docs/benchmarks/: README.md  real-pgvector-benchmark.json  real-pgvector-benchmark.md  real-pgvector-calibration.json  real-pgvector-plan.md  real-pgvector-sweep.json  scale-benchmark.md  sift1m-anticorrelated-pgvector-benchmark.json  sift1m-anticorrelated-pgvector-benchmark.md  sift1m-pgvector-benchmark.json  sift1m-pgvector-benchmark.md  synthetic-calibration.json  synthetic-proof.json  synthetic-sweep.json
examples/: README.md  demo.sql  explain-output.txt  query-vectors.json  recommend-output.txt
src/vecadvisor/: __init__.py  calibration.py  cli.py  costmodel.py  diagnostics.py  introspect.py  local_cache.py  local_probe.py  models.py  pgversion.py  plan.py  planner_observer.py  query_spec.py  recommend.py  selectivity.py  statistics_advisor.py  stats_health.py
src/vecadvisor/bench/: __init__.py  calibrate.py  crossover.py  datasets.py  db_runner.py  groundtruth.py  plots.py  proof.py  runner.py  sweep.py  validate.py
tests/: test_benchmark_runner.py  test_calibration.py  test_cli_integration.py  test_costmodel.py  test_crossover.py  test_db_runner.py  test_diagnostics.py  test_groundtruth.py  test_introspect_integration.py  test_local_cache.py  test_local_probe.py  test_pgversion.py  test_plan_integration.py  test_planner_observer.py  test_plots.py  test_prepare_ann_benchmark_dataset.py  test_proof.py  test_query_spec.py  test_recommend.py  test_selectivity.py  test_statistics_advisor.py  test_stats_health.py  test_sweep.py  test_synthetic_dataset.py  test_validation.py
tools/: prepare_ann_benchmark_dataset.py
