[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "vecadvisor"
version = "0.1.0"
description = "Cost-based advisor for filtered vector search in PostgreSQL/pgvector"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Varun" }
]
dependencies = [
  "numpy>=2.0",
  "pglast>=6.0",
  "psycopg[binary]>=3.2",
  "rich>=13.9",
  "typer>=0.16"
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5"
]

[project.scripts]
vecadvisor = "vecadvisor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/vecadvisor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["vecadvisor"]
