[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "vecadvisor"
version = "0.1.0a1"
description = "Cost-based advisor for filtered vector search in PostgreSQL/pgvector"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Varun Sharma" }
]
keywords = [
  "pgvector",
  "postgresql",
  "vector-search",
  "hnsw",
  "query-optimizer",
  "ann",
  "embeddings"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed"
]
dependencies = [
  "numpy>=2.0",
  "pglast>=6.0",
  "psycopg[binary]>=3.2",
  "rich>=13.9",
  "typer>=0.16"
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5"
]

[project.scripts]
vecadvisor = "vecadvisor.cli:app"

[project.urls]
Homepage = "https://github.com/vecadvisor/vecadvisor"
Repository = "https://github.com/vecadvisor/vecadvisor"
Issues = "https://github.com/vecadvisor/vecadvisor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vecadvisor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["vecadvisor"]
